--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,12 +1,12 @@
 <div class="container-small-card">
   <div class="small-card-photo">
     <img
-    src="https://p2.trrsf.com/image/fget/cf/1200/900/middle/images.terra.com/2023/03/28/565864492-sp-criancasmarvel-avenger-stationcred-neon-paquin33-800x533.jpeg"
+    src="{{photoCover}}"
     alt="small Card Image"
     height="100px">
   </div>
   <div class="small-card-title">
-    <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+    <h1><a href="#">{{cardTitle}}</a></h1>
   </div>
 </div>
 <hr>
