--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,5 +1,7 @@
 <div class="container-menu-bar">
   <ul>
+    <li><a [routerLink]='[""]'>Home</a></li>
+    <li><span>•</span></li>
     <li><a href="https://www.linkedin.com/in/tiago-prudente/" target="_blank">Linkedin</a></li>
     <li><span>•</span></li>
     <li><a href="https://github.com/kakouz" target="_blank">Github</a></li>
