--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -6,7 +6,7 @@
     height="100px">
   </div>
   <div class="small-card-title">
-    <h1><a href="#">{{cardTitle}}</a></h1>
+    <h1><a [routerLink]='["/content", id]'>{{cardTitle}}</a></h1>
   </div>
 </div>
 <hr>
